Closed Bug 1296582 Opened 8 years ago Closed 8 years ago

[Static Analysis][Uninitialised members] In constructor SurfaceDescriptorX11

Categories

(Core :: Graphics, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla51
Tracking Status
firefox51 --- fixed

People

(Reporter: andi, Assigned: andi)

References

(Blocks 1 open bug)

Details

(Keywords: coverity, Whiteboard: CID 1369644, CID 1369643)

Attachments

(1 file)

The Static Analysis tool Coverity detected that an Uninitialized pointer read pointer read can happen in the following context:

>>            SurfaceDescriptorX11 tmp = SurfaceDescriptorX11();
>>            (*(v__)) = tmp;
>>            if ((!(Read((&((v__)->get_SurfaceDescriptorX11())), msg__, iter__)))) {

This can happen since the members from tmp are not initialised in their contractor. Even this is a false-positive since the data will be overwritten in the Read function we should still initialise it in order to comply with our clang based static analysis tool that search for uninitialised member variables.
Comment on attachment 8782848 [details]
Bug 1296582 - ignore initialisation check for members in SurfaceDescriptorX11.

https://reviewboard.mozilla.org/r/72882/#review71196

Let's annotate these as uninitialized instead.
Attachment #8782848 - Flags: review?(jmuizelaar) → review-
Comment on attachment 8782848 [details]
Bug 1296582 - ignore initialisation check for members in SurfaceDescriptorX11.

https://reviewboard.mozilla.org/r/72882/#review71692
Attachment #8782848 - Flags: review?(jmuizelaar) → review+
Pushed by bpostelnicu@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/79c7fe81fe5a
ignore initialisation check for members in SurfaceDescriptorX11. r=jrmuizel
https://hg.mozilla.org/mozilla-central/rev/79c7fe81fe5a
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla51
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: