Bug 1296582 - ignore initialisation check for members in SurfaceDescriptorX11. r=jrmuizel

MozReview-Commit-ID: IrxMqvROHPH